fixed issues with horizontal scrollbar

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  max-width: 100vw;
 }
 
 @media (hover: hover) {
